--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         go-version: [ "1.20" ]
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       GOLANGCI_LINT_VERSION: v1.53.3
 
